WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Approval_Reason__c.field-meta.xml
<CustomField>
    <fullName>Approval_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>