WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Chosen_PDF_Template__c.field-meta.xml
<CustomField>
    <fullName>Chosen_PDF_Template__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chosen PDF Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>