WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/CustomerApproval__c.field-meta.xml
<CustomField>
    <fullName>CustomerApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Approval</label>
    <type>Checkbox</type>
</CustomField>