WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/CustomerApprovalOverride__c.field-meta.xml
<CustomField>
    <fullName>CustomerApprovalOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Approval Override</label>
    <type>Checkbox</type>
</CustomField>