WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/DatePrepared__c.field-meta.xml
<CustomField>
    <fullName>DatePrepared__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Prepared</label>
    <required>true</required>
    <type>Date</type>
</CustomField>