WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/FirstTimeOrder__c.field-meta.xml
<CustomField>
    <fullName>FirstTimeOrder__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Time Order</label>
    <length>3</length>
    <type>Text</type>
</CustomField>