WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Hardware_and_Services_are_Equal__c.field-meta.xml
<CustomField>
    <fullName>Hardware_and_Services_are_Equal__c</fullName>
    <formula>IF( Number_of_Hardware_Items__c = Number_of_Service_Items__c ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hardware and Services are Equal</label>
    <type>Checkbox</type>
</CustomField>