WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Internal_Sales_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Sales_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Sales Comments</label>
    <type>TextArea</type>
</CustomField>