WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/isPending__c.field-meta.xml
<CustomField>
    <fullName>isPending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pending</label>
    <type>Checkbox</type>
</CustomField>