WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Issued_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Issued_Order_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issued Order Date</label>
    <type>Date</type>
</CustomField>