WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Number_of_Service_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Service_Items__c</fullName>
    <label>Number of Service Items</label>
    <summarizedField>Shipment__c.Number_of_Service_Items__c</summarizedField>
    <summaryForeignKey>Shipment__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>