WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/PrimaryAccountName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAccountName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>