WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/PrimaryAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAccountNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Account Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>