WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/PrimaryAddress1__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAddress1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Address 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>