WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/PrimaryAddress2__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAddress2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Address 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>