WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/PrimaryCity__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>