WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Contact</label>
    <length>200</length>
    <type>Text</type>
</CustomField>