WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/PrimaryCreditLimit__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCreditLimit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Credit Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>