WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/PrimaryEmail__c.field-meta.xml
<CustomField>
    <fullName>PrimaryEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>