WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/PrimaryPhone__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Phone</label>
    <type>Phone</type>
</CustomField>