WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/PrimarySource__c.field-meta.xml
<CustomField>
    <fullName>PrimarySource__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>