WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/PrimarySponsor__c.field-meta.xml
<CustomField>
    <fullName>PrimarySponsor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>