WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/PrimaryState__c.field-meta.xml
<CustomField>
    <fullName>PrimaryState__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary State</label>
    <length>15</length>
    <type>Text</type>
</CustomField>