WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/PrimaryZip__c.field-meta.xml
<CustomField>
    <fullName>PrimaryZip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>