WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/PromoCode__c.field-meta.xml
<CustomField>
    <fullName>PromoCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promo Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>