WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Quote_Count_Shipment_Charges__c.field-meta.xml
<CustomField>
    <fullName>Quote_Count_Shipment_Charges__c</fullName>
    <description>Number of shipment charges.</description>
    <inlineHelpText>Number of shipment charges.</inlineHelpText>
    <label>Quote Count Shipment Charges</label>
    <summarizedField>Shipment__c.Count_Shipment_Charges__c</summarizedField>
    <summaryForeignKey>Shipment__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>