WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Quote_Stage__c.field-meta.xml
<CustomField>
    <fullName>Quote_Stage__c</fullName>
    <label>Quote Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Pending Customer Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>