WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Quote_Sum_Min_Price_Checks__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sum_Min_Price_Checks__c</fullName>
    <description>Number of shipment charges where the effective price is greater than or equal to the minimum sales price.</description>
    <inlineHelpText>Number of shipment charges where the effective price is greater than or equal to the minimum sales price.</inlineHelpText>
    <label>Quote Sum Min Price Checks</label>
    <summarizedField>Shipment__c.Sum_Min_Price_Checks__c</summarizedField>
    <summaryForeignKey>Shipment__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>