WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Quote_Total_Applicable_One_Time_Expense__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total_Applicable_One_Time_Expense__c</fullName>
    <label>Quote Total Applicable One-Time Expense</label>
    <summarizedField>Shipment__c.One_Time_Expense_Shipment_Charges__c</summarizedField>
    <summaryForeignKey>Shipment__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>