WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Quote_Total_Recurring_Monthly_Expense__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total_Recurring_Monthly_Expense__c</fullName>
    <label>Quote Total Recurring Monthly Expense</label>
    <summarizedField>Shipment__c.Monthly_Recurring_Shipment_Charges__c</summarizedField>
    <summaryForeignKey>Shipment__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>