WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Quote_Total_Shipping_Handling__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total_Shipping_Handling__c</fullName>
    <label>Quote Total Shipping &amp; Handling</label>
    <summarizedField>Shipment__c.Shipping_Handling_Cost__c</summarizedField>
    <summaryForeignKey>Shipment__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>