WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/QuoteAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteAutoNumber__c</fullName>
    <displayFormat>Q{00000000}</displayFormat>
    <label>QuoteAutoNumber</label>
    <type>AutoNumber</type>
</CustomField>