WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Quote Number.  This field is not available until the quote is created when save or add items is done.</inlineHelpText>
    <label>Quote Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>