WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Recurring_Charge_Count__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Charge_Count__c</fullName>
    <label>Recurring Charge Count</label>
    <summarizedField>Shipment__c.Recurring_Charge_Count__c</summarizedField>
    <summaryForeignKey>Shipment__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>