WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/RMANumber__c.field-meta.xml
<CustomField>
    <fullName>RMANumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RMA Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>