WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Sales_Rep_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Rep 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>