WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SalesRep1__c.field-meta.xml
<CustomField>
    <fullName>SalesRep1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>