WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SalesRep2__c.field-meta.xml
<CustomField>
    <fullName>SalesRep2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>