WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SecondaryAccountName__c.field-meta.xml
<CustomField>
    <fullName>SecondaryAccountName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>