WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SecondaryAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>SecondaryAccountNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Account Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>