WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SecondaryAddress1__c.field-meta.xml
<CustomField>
    <fullName>SecondaryAddress1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Address 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>