WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SecondaryCertificateId__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCertificateId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Certificate Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>