WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SecondaryCity__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>