WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SecondaryContact__c.field-meta.xml
<CustomField>
    <fullName>SecondaryContact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Contact</label>
    <length>200</length>
    <type>Text</type>
</CustomField>