WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SecondaryCreditLimit__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCreditLimit__c</fullName>
    <label>Secondary Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>