WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SecondaryEmail__c.field-meta.xml
<CustomField>
    <fullName>SecondaryEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>