WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SecondaryPhone__c.field-meta.xml
<CustomField>
    <fullName>SecondaryPhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Phone</label>
    <type>Phone</type>
</CustomField>