WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SecondarySource__c.field-meta.xml
<CustomField>
    <fullName>SecondarySource__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>