WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SecondarySponsor__c.field-meta.xml
<CustomField>
    <fullName>SecondarySponsor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>