WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SecondaryState__c.field-meta.xml
<CustomField>
    <fullName>SecondaryState__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seconday State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>