WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SecondaryTaxExempt__c.field-meta.xml
<CustomField>
    <fullName>SecondaryTaxExempt__c</fullName>
    <label>Secondary Tax Exempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>