WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/SecondaryZip__c.field-meta.xml
<CustomField>
    <fullName>SecondaryZip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>