WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Shipping_Cost_flag__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Cost_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Cost flag</label>
    <type>Checkbox</type>
</CustomField>