WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Termination_Fee_Flag__c.field-meta.xml
<CustomField>
    <fullName>Termination_Fee_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Termination Fee Flag</label>
    <type>Checkbox</type>
</CustomField>