WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/UsingSecondaryAccount__c.field-meta.xml
<CustomField>
    <fullName>UsingSecondaryAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a secondary account is set on the quote.</description>
    <inlineHelpText>Indicates whether a secondary account is set on the quote.</inlineHelpText>
    <label>Using Secondary Account</label>
    <type>Checkbox</type>
</CustomField>