WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <inlineHelpText>Select the Vendor to offer products for this quote.</inlineHelpText>
    <label>Telematics Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Networkfleet</fullName>
            </value>
            <value>
                <fullName>BSM Wireless</fullName>
            </value>
            <value>
                <fullName>GPS Insight</fullName>
            </value>
            <value>
                <fullName>Geotab</fullName>
            </value>
            <value>
                <fullName>Wex Service Provider</fullName>
            </value>
            <value>
                <fullName>Alertdriving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>