WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Vendor_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Email__c</fullName>
    <formula>Vendor_Account__r.Order_Notification_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Email</label>
    <type>Text</type>
</CustomField>