WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Vendor_Order_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Order_Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor Order Instructions</label>
    <type>TextArea</type>
</CustomField>