WexGit/Wex_DX/force-app/main/default/objects/zqu__Quote__c/fields/Vendor_Order_Sent__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Order_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Order Sent</label>
    <type>Checkbox</type>
</CustomField>